gcc/ 	PR tree-optimization/49545 	* builtins.c (get_object_alignment_1): Update function comment. 	Do not use DECL_ALIGN for functions, but test 	TARGET_PTRMEMFUNC_VBIT_LOCATION instead. 	* fold-const.c (get_pointer_modulus_and_residue): Don't check 	for functions here. 	* tree-ssa-ccp.c (get_value_from_alignment): Likewise.

gcc/testsuite/
	* gcc.dg/torture/pr49169.c: Restrict to ARM and MIPS targets.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@175627 138bc75d-0d04-0410-961f-82ee72b054a4